--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 WALLET_MNEMONIC = "easily borrow grunt old hospital reveal desk blood enter owner drastic sunset"
 INFURA_ENDPOINT = "https://rinkeby.infura.io/v3/a110ddb903254a8b9d046fcbfc40fa35"
-FACTORY_ADDRESS = "0x8ABd2c3d5aaFdbeb6f9CB81BA2e4dEeFAe1E280D"
+LOTTERY_ADDRESS = "0x8ABd2c3d5aaFdbeb6f9CB81BA2e4dEeFAe1E280D"
